Fixing search text filtering so it is done in the controller before limitTo filtering. Adding padding on results for readability.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,7 +109,7 @@ th, td {
 
 .comicDiv {
     background-color: lightgray;
-    padding-bottom: 25px;
+    padding: 75px;
 }
 
 .lightRow {
